--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo">
             <img src="https://images.pexels.com/photos/2084239/pexels-photo-2084239.jpeg?auto=compress&cs=tinysrgb&w=50" alt="Grocery Logo">
-            <h1>Modern Grocery</h1>
+            <h1>Preety</h1>
         </div>
         <nav>
             <ul>
